--- a/de naam van de opdracht/package.json
+++ b/de naam van de opdracht/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "eslint-plugin-vue": "^10.7.0",
+    "typescript-eslint": "^8.53.1",
     "vite": "^7.2.4"
   }
 }
